# ghtray

./: .gitignore  CLAUDE.md  Cargo.toml  IDEA.md  LICENSE  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
crates/ghtray-core/: Cargo.toml
crates/ghtray-core/src/: config.rs  github.rs  lib.rs  logging.rs  models.rs  state.rs
docs/: phase1-data-exploration.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: settings.html
