[package]
name = "ghtray"
version = "0.1.0"
edition = "2024"

[dependencies]
ghtray-core = { path = "../crates/ghtray-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "ghtray_lib"
path = "src/lib.rs"

[[bin]]
name = "ghtray"
path = "src/main.rs"
